# Heph

./: .gitignore  CMakeLists.txt  README.md  bootstrap.ps1  bootstrap.py  bootstrap.sh
.github/workflows/: build_android.yml  build_linux.yml  build_windows.yml  docs.yml
benchmarks/: BenchBuffer.cpp  CMakeLists.txt
cmake/: FindUUID.cmake  HephConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml
include/: Complex.h  Concepts.h  ConsoleLogger.h  Enum.h  Event.h  EventArgs.h  EventParams.h  EventResult.h  HephConcepts.h  HephEndian.h  HephShared.h  ICloneable.h  Stopwatch.h  Timer.h  UUID.h
include/Buffers/: ArithmeticBuffer.h  Buffer.h  BufferFlags.h  BufferIterator.h  RealBuffer.h
include/Exceptions/: Exception.h  ExceptionEventArgs.h  Exceptions.h  ExternalException.h  InsufficientMemoryException.h  InvalidArgumentException.h  InvalidOperationException.h  InvalidStateException.h  NotFoundException.h  NotImplementedException.h  NotSupportedException.h  TimeoutException.h
include/Heph/: Concepts.h  ConsoleLogger.h  Enum.h  Event.h  EventArgs.h  EventParams.h  EventResult.h  ICloneable.h  Stopwatch.h  UUID.h  Utils.h
include/Heph/Buffers/: ArithmeticBuffer.h  Buffer.h  BufferFlags.h  BufferIterator.h
include/Heph/Buffers/Iterators/: BufferIterator.h  BufferIteratorConcept.h  CircularBufferIterator.h
include/Heph/Exceptions/: Exception.h  ExceptionEventArgs.h  Exceptions.h  ExternalException.h  InsufficientMemoryException.h  InvalidArgumentException.h  InvalidOperationException.h  InvalidStateException.h  NotFoundException.h  NotImplementedException.h  NotSupportedException.h  TimeoutException.h
include/Heph/Native/: AndroidHelpers.h  WinHelpers.h
include/Native/: AndroidHelpers.h  WinHelpers.h
src/: ConsoleLogger.cpp  Event.cpp  EventParams.cpp  EventResult.cpp  HephShared.cpp  Stopwatch.cpp  Timer.cpp  UUID.cpp  Utils.cpp
src/Buffer/: ArithmeticBuffer.cpp  RealBuffer.cpp
src/Exceptions/: Exception.cpp  ExceptionEventArgs.cpp  ExternalException.cpp  InsufficientMemoryException.cpp  InvalidArgumentException.cpp  InvalidOperationException.cpp  InvalidStateException.cpp  NotFoundException.cpp  NotImplementedException.cpp  NotSupportedException.cpp  TimeoutException.cpp
src/Native/: AndroidHelpers.cpp
tests/: ArithmeticBufferTests.cpp  BufferTests.cpp  CMakeLists.txt  ComplexTests.cpp  EnumTests.cpp  EventTests.cpp  ExceptionTests.cpp  HephEndianTests.cpp  HephSharedTests.cpp  StopwatchTests.cpp  TimerTests.cpp  UUIDTests.cpp  UtilsTests.cpp
